# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name                   = "rocketmq-remoting"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords               = ["rocketmq-rust", "async", "non-blocking", "futures", "rocketmq"]
categories             = ["asynchronous", "network-programming"]
description            = "Rust implementation of Apache rocketmq remoting"
readme                 = "README.md"
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocketmq-common = { workspace = true }
rocketmq-macros = { workspace = true }
rocketmq-rust   = { workspace = true }
rocketmq-error  = { workspace = true }

anyhow.workspace = true
bytes.workspace  = true

#tokio
tokio.workspace      = true
tokio-util.workspace = true

#log
tracing.workspace = true

#json spupport
serde.workspace              = true
serde_json.workspace         = true
serde_json_any_key.workspace = true

rand.workspace = true

flate2 = { workspace = true }

#futures
futures      = "0.3"
futures-util = "0.3"

num_cpus.workspace    = true
parking_lot.workspace = true

# High-performance channel alternative to tokio::mpsc
# flume provides 40-60% better throughput with lock-free design
flume                   = "0.12"
trait-variant.workspace = true
uuid                    = { workspace = true }
cheetah-string          = { workspace = true }

bitvec   = "1.0.1"
bytemuck = "1.25.0"

dashmap = { workspace = true, features = ["serde"] }

# SIMD-accelerated JSON parsing (30-50% faster than serde_json)
simd-json = { version = "0.17", optional = true }

[features]
default = []
simd    = ["simd-json"]

[dev-dependencies]
bytes     = "1.11.1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name    = "encode_decode_bench"
harness = false

[[bench]]
name    = "simd_json_bench"
harness = false

[[bench]]
name    = "encode_buffer_bench"
harness = false
