[package]
name = "rocketmq-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
rand = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
#once_cell = { workspace = true }
thread_local = "1"
