# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name                   = "rocketmq-runtime"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords               = ["Runtime", "async", "tokio", "futures"]
categories             = ["asynchronous"]
readme                 = "README.md"
description.workspace  = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
cron = "0.17"
dashmap.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[test]]
name = "task_group_concurrency_model"
path = "tests/task_group_concurrency_model.rs"

[[bench]]
name    = "task_group_lifecycle_bench"
harness = false

[[bench]]
name    = "scheduled_task_group_bench"
harness = false

[[bench]]
name    = "blocking_executor_bench"
harness = false
