# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rocketmq-store-local"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
description = "Local storage primitives for Apache RocketMQ in Rust."
rust-version.workspace = true

[features]
default = []
fast-load = []
safe-load = []
io_uring = ["dep:tokio-uring"]
observability = [
  "dep:rocketmq-observability",
  "rocketmq-observability/otel-metrics",
]

[dependencies]
bytes.workspace = true
cheetah-string.workspace = true
dashmap.workspace = true
memmap2 = "0.9.10"
page_size = "0.6.0"
parking_lot.workspace = true
rayon = "1.12"
rocketmq-error.workspace = true
rocketmq-observability = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.27.0"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_System_Memory",
  "Win32_System_Threading",
] }
