[package]
name = "rocketmq-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["apache-rocketmq", "rocketmq-rust", "rocketmq-store", "rust", "storage"]
readme = "README.md"
description = "Storage layer for Apache RocketMQ in Rust."
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["local_file_store"]
local_file_store = []
rocksdb_store = []
data_store = ["local_file_store"]


[dependencies]
rocketmq-common = { workspace = true }
rocketmq-rust = { workspace = true }
rocketmq-remoting = { workspace = true }
rocketmq-error = { workspace = true }

#tools
dirs.workspace = true

parking_lot.workspace = true
bytes.workspace = true

#tokio
tokio.workspace = true
tokio-util.workspace = true

#log
tracing.workspace = true

#json spupport
serde.workspace = true
serde_json.workspace = true

lazy_static.workspace = true

tempfile = "3.23.0"

memmap2 = "0.9.8"
trait-variant.workspace = true
sysinfo = "0.37.2"
once_cell = { workspace = true }
cheetah-string = { workspace = true }
thiserror = { workspace = true }

futures-util = "0.3.31"
rand = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
page_size = "0.6.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.176"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = ["Win32_Security",
    "Win32_System_Memory_NonVolatile",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading"] }


[dev-dependencies]
tempfile = "3.23.0"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "delivery"
harness = false