# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name = "rocketmq-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = [
  "apache-rocketmq",
  "rocketmq-rust",
  "rocketmq-store",
  "rust",
  "storage",
]
readme = "README.md"
description = "Storage layer for Apache RocketMQ in Rust."
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default          = ["local_file_store", "fast-load"]
local_file_store = []
rocksdb_store    = []
data_store       = ["local_file_store"]
# io_uring support for advanced async I/O (Linux 5.1+)
io_uring = ["dep:tokio-uring"]
# Optimized parallel CommitLog loading (default enabled, disable with --no-default-features)
fast-load = []
# Safe sequential loading fallback (disables fast-load)
safe-load = []


[dependencies]
rocketmq-common   = { workspace = true }
rocketmq-rust     = { workspace = true }
rocketmq-remoting = { workspace = true }
rocketmq-error    = { workspace = true }

#tools
dirs.workspace = true

parking_lot.workspace = true
bytes.workspace       = true
arc-swap              = "1.8"

#tokio
tokio.workspace      = true
tokio-util.workspace = true

#log
tracing.workspace = true

#json spupport
serde.workspace      = true
serde_json.workspace = true

tempfile = "3.25.0"

memmap2                 = "0.9.9"
trait-variant.workspace = true
sysinfo                 = "0.38.1"
cheetah-string          = { workspace = true }
thiserror               = { workspace = true }

futures-util = "0.3.31"
rand         = { workspace = true }
uuid         = { workspace = true }
anyhow       = { workspace = true }
page_size    = "0.6.0"

dashmap   = { workspace = true }
hashbrown = "0.16"
rayon     = "1.11"

[target.'cfg(target_os = "linux")'.dependencies]
# Phase 3 Optimization: io_uring for Linux only (optional)
tokio-uring = { version = "0.5", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Security",
  "Win32_System_Memory_NonVolatile",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
] }


[dev-dependencies]
tempfile  = "3.25.0"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name    = "delivery"
harness = false

[[bench]]
name    = "mapped_buffer_bench"
harness = false

[[bench]]
name    = "zero_copy_comparison"
harness = false

[[bench]]
name    = "zerocopy_performance"
harness = false

[[bench]]
name    = "commitlog_load_bench"
harness = false

[[bench]]
name              = "io_uring_performance"
harness           = false
required-features = ["io_uring"]
