# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rocketmq-tieredstore"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = [
  "apache-rocketmq",
  "rocketmq-rust",
  "rocketmq-tieredstore",
  "rust",
  "storage",
]
readme = "README.md"
description = "Tiered storage layer for Apache RocketMQ in Rust."
rust-version.workspace = true

[features]
default = ["posix-provider", "memory-provider", "serde"]
posix-provider = []
memory-provider = []
serde = ["dep:serde", "dep:serde_json"]
rocketmq-store-integration = []
otel-metrics = ["rocketmq-observability/otel-metrics"]

[dependencies]
rocketmq-common = { workspace = true }
rocketmq-error = { workspace = true }
rocketmq-observability = { workspace = true }
rocketmq-runtime = { workspace = true }

bytes = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile  = "3.27.0"

[[bench]]
name    = "tieredstore_bench"
harness = false

[[bench]]
name              = "tieredstore_dispatcher_lifecycle_bench"
harness           = false
required-features = ["serde"]

[[bench]]
name              = "tieredstore_cleanup_lifecycle_bench"
harness           = false
required-features = ["serde"]
