# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rocketmq-transport"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["rocketmq-rust", "transport", "tcp", "tls"]
categories = ["asynchronous", "network-programming"]
description = "Bounded TCP/TLS transport for RocketMQ Rust"
rust-version.workspace = true

[features]
default = ["tls"]
simd = ["rocketmq-protocol/simd"]
tls = ["arc-swap", "rcgen", "rustls-native-certs", "rustls-pemfile", "tokio-rustls"]
observability = ["dep:rocketmq-observability", "rocketmq-observability/otel-metrics"]

[dependencies]
rocketmq-error = { workspace = true }
rocketmq-protocol = { workspace = true }
rocketmq-runtime = { workspace = true }
rocketmq-security-api = { workspace = true }
rocketmq-observability = { workspace = true, optional = true }
bytes.workspace = true
cheetah-string.workspace = true
dashmap.workspace = true
futures-util = "0.3"
parking_lot.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

arc-swap = { version = "1.9", optional = true }
rcgen = { version = "0.14", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pemfile = { version = "2.2", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true
tempfile = "3.27.0"
tokio = { workspace = true, features = ["test-util"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62.2", features = [
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
] }
