[package]
name = "rocketmq-tui"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["tui", "terminal", "dashboard", "rocketmq", "tools"]
categories = ["development-tools", "command-line-interface"]
readme = "README.md"
description = "A RocketMQ Rust terminal command management tool implemented based on Ratatui."

[dependencies]
