[package]
name                   = "rocketmq-rust"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
readme.workspace       = true
description.workspace  = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio              = { workspace = true }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
rocketmq-error     = { workspace = true }
anyhow             = { workspace = true }
parking_lot        = { workspace = true }
serde              = { workspace = true }

uuid   = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cron   = "0.15"


[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "basic_usage_more"
path = "examples/basic_usage_more.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
