# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name                   = "rocketmq-rust"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
readme.workspace       = true
description.workspace  = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio          = { workspace = true }
tokio-util     = { workspace = true }
tracing        = { workspace = true }
rocketmq-error = { workspace = true }
anyhow         = { workspace = true }
parking_lot    = { workspace = true }
serde          = { workspace = true }

uuid   = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cron   = "0.15"


[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "basic_usage_more"
path = "examples/basic_usage_more.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
